--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,13 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "Q-7_OfPG38WX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world, from Joao Stock\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Hellow world\")"
+    "print(\"Hello world, from Joao Stock\")"
    ]
   }
  ],
@@ -49,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
